<resources>
    <string name="app_name">CITRARB</string>
    <string name="citrarb_news_domain">coalcity.ng</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="devstrike_logo">"Powered By DevStrike "</string>
    <string name="powered_by_text">Powered By</string>
    <string name="dev_strike_text">Devstrike Inc.</string>
    <string name="splash_logo_text">Coal City Connect Logo</string>
    <string name="landing_page">Landing Page</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_account">Account</string>
    <string name="tool_bar_title">Coal City Connect</string>
    <string name="tool_bar_sub_title">Connecting People</string>
    <string name="share_news">Share News</string>
    <string name="save_news">Save News</string>
    <string name="saved_news">Saved News</string>
    <string name="news_detail_image">"News Details Image "</string>
    <string name="news_detail_iv_save_news">Save news to Database</string>
    <string name="news_detail_iv_share_news">Share News Detail</string>
    <string name="saved_news_title">Saved News</string>
    <string name="account_not_logged_in_title">Not Logged In</string>
    <string name="account_btn_login">Log In</string>
    <string name="account_not_logged_in_create_account">Create New Account</string>
    <string name="account_not_log_in">Log In</string>
    <string name="account_create_account_log_in">Log in instead</string>
    <string name="sign_in_email">Email</string>
    <string name="sign_in_password">Password</string>
    <string name="account_log_in_forgot_password_prompt">Forgot Password</string>
    <string name="account_sign_up">Sign Up</string>
    <string name="sign_up_username">Username</string>
    <string name="sign_up_confirm_password">Confirm Password</string>
    <string name="account_btn_sign_up">Sign Up</string>
    <string name="account_sign_up_log_in">Log In Instead</string>
    <string name="add_phone_number">Add Phone Number</string>
    <string name="edit_phone_number">Edit Phone Number</string>
    <string name="add_gender">Add Gender</string>
    <string name="add_occupation">Add Occupation</string>
    <string name="edit_occupation">Edit Occupation</string>
    <string name="add_location">Add Location</string>
    <string name="search_eye_witness">Search Title</string>
    <string name="add_eye_witness_report">Add Eye Witness Report</string>
    <string name="iv_eye_witness_star">Eye Witness Rating</string>
    <string name="menu_logout">Log out</string>
    <string name="sort_all_members">Sort all members in alphabetical order</string>
    <string name="search_all_members">Search for a member by name</string>
    <string name="send_friend_request_text">Send Request</string>
    <string name="friends_request_title">Requests</string>
    <string name="friends_request_see_all">See all</string>
    <string name="friends_title">Friends</string>
    <string name="confirm_friend_request">Confirm friend request</string>
    <string name="reject_friend_request">Reject friend request</string>
    <string name="call_friend_text">Call</string>
    <string name="message_friend_text">Message</string>
    <string name="news_menu">News</string>
    <string name="tv_menu">TV</string>
    <string name="members_menu">Members</string>
    <string name="connect_menu">Connect</string>
    <string name="eye_witness_menu">Eye Witness</string>
    <string name="market_place_menu">Market Place</string>
    <string name="events_menu">Events</string>
    <string name="music_menu">Music</string>
    <string name="uploads_menu">Uploads</string>
    <string name="btn_deleter_account_text">Delete Account</string>
    <string name="sign_in_phone_number">Phone Number</string>
    <string name="sign_in_gender">Gender</string>
    <string name="sign_in_occupation">Occupation</string>
    <string name="sign_in_location">Location</string>
    <string name="sort_all_upcoming_events">Sort all upcoming events in alphabetical order</string>
    <string name="search_upcoming_events">Search for an upcoming event by name</string>
    <string name="upcoming_event_going_btn_text">Going</string>
    <string name="upcoming_event_not_going_btn_text">Not going</string>
    <string name="search_concluded_events">Search for a concluded event by name</string>
    <string name="iv_event_star">Concluded Event Rating</string>
    <string name="events_fab">Button to create new event or view attending events</string>
    <string name="new_event">Create New Event</string>
    <string name="attending_event">Attending Events</string>
    <string name="new_event_image">New Event Image</string>
    <string name="create_event_name">Event Name</string>
    <string name="create_event_description">Event Description</string>
    <string name="create_event_location">Event Location</string>
    <string name="new_event_select_current_event_location">Select current location as event location</string>
    <string name="create_event_time">Event Date</string>
    <string name="cancel">cancel</string>
    <string name="next">Next</string>
    <string name="create_event_hosts_title">Hosts</string>
    <string name="add_host">Add hosts for new event</string>
    <string name="create_event_title">Create Event</string>
    <string name="add_new_event_image_prompt">Add Event Image</string>
    <string name="create_event_date">Enter date and time for the new event</string>
    <string name="add_hosts">Add hosts</string>
    <string name="create_event">Create Event</string>
    <string name="sort_all_concluded_eventsS">Sort all concluded events alphabetically</string>
    <string name="sort_all_concluded_events">Sort all concluded events alphabetically</string>
    <string name="message_connect_text">Message Occupation Member via Whatsapp</string>
    <string name="share_connect_text">"Share Occupation Member "</string>
    <string name="call_connect_text">Call Occupation Member</string>
    <string name="occupation_dialog_image">Occupation Member Image</string>
    <string name="occupation_dialog_call_image">Call Occupation Member</string>
    <string name="create_occupation_title">Add Occupation</string>
    <string name="create_occupation_name">Your Work Name</string>
    <string name="create_occupation_description">Occupation Description (min 25 characters) </string>
    <string name="create_occupation_category">Category</string>
    <string name="okay">Okay</string>
    <string name="connect_fab">Button to add new occupation</string>
    <string name="create_occupation_job_title">Job Title</string>
    <string name="create_occupation_phone_number">Job Contact Number</string>
    <string name="search_all_connects">Search Occupation</string>

    <string-array name="occupation_categories">
        <item>Tech</item>
        <item>Artisan (Service)</item>
        <item>Medical</item>
        <item>Business</item>
        <item>Education</item>
        <item>Others</item>

    </string-array>
</resources>