<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2023.
  ~ Richard Uzor
  ~ For Afro Connect Technologies
  ~ Under the Authority of Devstrike Digital Ltd.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".features.account.ui.AccountSignUp">


    <TextView
        android:id="@+id/account_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/margin_maxi"
        android:padding="@dimen/padding_mini"
        android:text="@string/account_sign_up"
        android:textSize="@dimen/text_l"
        android:contentDescription="@string/account_sign_up"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_sign_up_username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_mini"
        android:hint="@string/sign_up_username"
        android:paddingTop="@dimen/padding_midi">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/sign_up_username"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:labelFor="@id/sign_up_username" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_sign_up_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_mini"
        android:hint="@string/sign_in_email"
        android:paddingTop="@dimen/padding_midi">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/sign_in_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:labelFor="@id/sign_up_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_sign_up_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_mini"
        android:hint="@string/sign_in_password"
        android:paddingTop="8dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/custom_secondary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/sign_in_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:labelFor="@id/sign_up_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_sign_up_confirm_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_mini"
        android:hint="@string/sign_up_confirm_password"
        android:paddingTop="8dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/custom_secondary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/sign_up_confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:labelFor="@id/sign_up_confirm_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/account_sign_up_btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_midi"
        android:backgroundTint="@color/custom_secondary"
        android:padding="@dimen/padding_mini"
        android:text="@string/account_btn_sign_up" />

    <TextView
        android:id="@+id/account_sign_up_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_mini"
        android:padding="@dimen/padding_mini"
        android:text="@string/account_sign_up_log_in"
        android:textSize="@dimen/text_l" />


</LinearLayout>