<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2023.
  ~ Richard Uzor
  ~ For Afro Connect Technologies
  ~ Under the Authority of Devstrike Digital Ltd.
  ~
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.events.newevent.CreateEvent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_mini"
        android:layout_marginBottom="@dimen/padding_mini"
        app:cardElevation="@dimen/padding_mini">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/iv_create_event_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_mini"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/text_xl"
                android:text="@string/create_event_title" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                >

                <ImageView
                    android:id="@+id/iv_create_new_event_image"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/padding_mini"
                    android:layout_marginTop="@dimen/padding_mini"
                    android:layout_marginEnd="@dimen/padding_mini"
                    android:layout_marginBottom="@dimen/padding_mini"
                    android:contentDescription="@string/new_event_image"
                    android:scaleType="fitXY"
                    tools:src="@tools:sample/avatars" />

                <ImageView
                    android:id="@+id/add_event_image_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/padding_mini"
                    android:layout_marginTop="@dimen/padding_mini"
                    android:layout_marginEnd="@dimen/padding_mini"
                    android:layout_marginBottom="@dimen/padding_mini"
                    android:contentDescription="@string/new_event_image"
                    app:srcCompat="@drawable/ic_add" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/add_event_image_icon"
                    android:text="@string/add_new_event_image_prompt"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/padding_mini"
        android:layout_margin="@dimen/padding_mini"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/card_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/profile_footer">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_create_event_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_mini"
                android:hint="@string/create_event_name"
                android:padding="@dimen/padding_mini">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_create_event_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/create_event_name"
                    android:importantForAutofill="no"
                    android:drawableStart="@drawable/ic_name_tag"
                    android:inputType="textPersonName"
                    android:labelFor="@id/et_create_event_name" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_create_event_description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_mini"
                android:hint="@string/create_event_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_create_event_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/create_event_description"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:drawableStart="@drawable/ic_info"
                    android:labelFor="@id/et_create_event_description"
                    android:minLines="2"
                    android:maxLines="3"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_create_event_location"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:layout_margin="@dimen/padding_mini"
                    android:hint="@string/create_event_location">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_create_event_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/create_event_location"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        android:drawableStart="@drawable/ic_location_marker"
                        android:labelFor="@id/et_create_event_location" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    app:srcCompat="@drawable/ic_location"
                    android:id="@+id/icon_location"
                    android:contentDescription="@string/new_event_select_current_event_location"
                    android:layout_margin="@dimen/padding_mini"
                    android:paddingTop="@dimen/padding_maxi"/>

            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_create_event_time"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_mini"
                android:hint="@string/create_event_time">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_create_event_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/create_event_date"
                    android:importantForAutofill="no"
                    android:inputType="datetime"
                    android:drawableStart="@drawable/ic_calendar_clock"
                    android:labelFor="@id/et_create_event_time" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_margin="@dimen/padding_mini"
                android:padding="@dimen/padding_mini">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/create_event_cancel_btn"
                    android:text="@string/cancel"
                    android:backgroundTint="@color/custom_secondary"
                    android:layout_margin="@dimen/padding_mini"
                    android:padding="@dimen/padding_mini"
                    app:strokeWidth="2dp"
                    app:strokeColor="@color/custom_primary"
                    />


                <com.google.android.material.button.MaterialButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/create_event_next_btn"
                    android:text="@string/next"
                    android:backgroundTint="@color/custom_secondary"
                    android:layout_margin="@dimen/padding_mini"
                    android:padding="@dimen/padding_mini"
                    app:strokeWidth="2dp"
                    app:strokeColor="@color/custom_primary"/>


            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</RelativeLayout>